--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,14 +32,13 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
-
 }
 
 a {
@@ -85,27 +84,25 @@ p {
     height: 100%;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background-color: #2589bd;
-
 }
 
-.benefit {
+.benefit-section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefit h3 {
+.benefit-section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefit img {
+.benefit-section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
-
-.contents {
+.seo-section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -114,12 +111,11 @@ p {
     color: #ffffff;
 }
 
-.contents img {
+.seo-section img {
     max-height: 200px;
 }
 
-
-.contents h2 {
+.seo-section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
